# hotkey-manager

./: .gitignore  CLAUDE.md  Cargo.toml  example-config.ron
crates/hotkey-manager/: Cargo.toml
crates/hotkey-manager/examples/: complete_simple.rs  simple_server.rs  with_managed_client.rs  with_process.rs
crates/hotkey-manager/src/: client.rs  error.rs  ipc.rs  key.rs  keymap.rs  lib.rs  manager.rs  process.rs  server.rs  state.rs
crates/hotki/: Cargo.toml  Dioxus.toml  Info.plist  fix_info_plist.sh  test_ctrlc.sh
crates/hotki-cli/: Cargo.toml
crates/hotki-cli/src/: main.rs
crates/hotki/assets/: main.css  tailwind.css
crates/hotki/conf/: test.ron
crates/hotki/confs/: simple.ron
crates/hotki/src/: config.rs  hud.rs  logs.rs  main.rs  platform_specific.rs  ringbuffer.rs  settings.rs
crates/keymode/: Cargo.toml
crates/keymode/src/: keymap.rs  lib.rs  mode.rs  shell.rs  state.rs
scripts/: resize-tray-icon.sh
