[package]
name = "hotkey-manager"
version = "0.1.0"
authors = ["Aldo Cortesi <aldo@corte.si>"]
edition = "2021"
description = "A general-purpose global hotkey manager"
license = "MIT"

[dependencies]
global-hotkey = "0.7"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
