[package]
name = "hotki-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
anyhow = "1.0"
hotkey-manager = { path = "../hotkey-manager" }
keymode = { path = "../keymode" }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tao = "0.30"
clap = { version = "4.5", features = ["derive"] }
