[package]
name = "hotki"
version = "0.1.0"
authors = ["Aldo Cortesi <aldo@corte.si>"]
edition = "2021"


[dependencies]
hotkey-manager = { path = "../hotkey-manager" }
keymode = { path = "../keymode"}
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.10.1"

dioxus = { version = "0.7.0-alpha.3", features = [] }
dioxus-desktop = "0.7.0-alpha.3"
tokio = { version = "1", features = ["time", "sync", "rt", "macros"] }
image = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tray-icon = "0.21.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
