[package]
name = "keymode"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
hotkey-manager = { path = "../hotkey-manager" }
serde = { version = "1.0", features = ["derive"] }
ron = "0.10.1"
